[package]
name = "dummyhttp"
version = "1.1.1"
description = "Super simple HTTP server that replies with a fixed body and a fixed response code"
authors = ["Sven-Hendrik Haase <svenstaro@gmail.com>"]
repository = "https://github.com/svenstaro/dummyhttp"
license = "MIT"
readme = "README.md"
keywords = ["dummy", "fake", "http-server", "http", "server"]
categories = ["command-line-utilities", "command-line-interface", "network-programming", "web-programming::http-server"]
edition = "2021"

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = true

[dependencies]
Inflector = { version = "0.11", default-features = false }
anyhow = "1"
axum = { version = "0.8", features = ["http2"] }
axum-server = "0.7"
chrono = "0.4.41"
clap = { version = "4", features = ["derive", "cargo", "wrap_help"] }
clap_complete = "4"
clap_mangen = "0.2"
colored = "3"
colored_json = "5"
hyper = { version = "1" }
lipsum = "0.9"
rustls = { version = "0.23.28", default-features = false, features = ["ring"] }
serde_json = "1.0"
tera = "1"
tokio = { version = "1.45", features = ["rt-multi-thread"] }
tower = { version = "0.5", features = ["util", "filter"] }
uuid = { version = "1", features = ["v4"] }

[features]
default = ["tls"]
# This feature allows us to use rustls only on architectures supported by ring.
# See also https://github.com/briansmith/ring/issues/1182
# and https://github.com/briansmith/ring/issues/562
# and https://github.com/briansmith/ring/issues/1367
tls = ["axum-server/tls-rustls-no-provider"]

[dev-dependencies]
assert_cmd = "2.0"
port_check = "0.2"
predicates = "3"
pretty_assertions = "1.2"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
rstest = "0.25"
rstest_reuse = "0.7.0"
url = "2.5"
